Tema5/Actividad-2-LL-LR/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUM
Rule 8     factor -> VAR
Rule 9     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

DIVIDE               : 5
LPAREN               : 9
MINUS                : 2
NUM                  : 7
PLUS                 : 1
RPAREN               : 9
TIMES                : 4
VAR                  : 8
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 9 0
factor               : 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 7
    MINUS           shift and go to state 8


state 2

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 9
    DIVIDE          shift and go to state 10


state 3

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 4

    (7) factor -> NUM .

    TIMES           reduce using rule 7 (factor -> NUM .)
    DIVIDE          reduce using rule 7 (factor -> NUM .)
    PLUS            reduce using rule 7 (factor -> NUM .)
    MINUS           reduce using rule 7 (factor -> NUM .)
    $end            reduce using rule 7 (factor -> NUM .)
    RPAREN          reduce using rule 7 (factor -> NUM .)


state 5

    (8) factor -> VAR .

    TIMES           reduce using rule 8 (factor -> VAR .)
    DIVIDE          reduce using rule 8 (factor -> VAR .)
    PLUS            reduce using rule 8 (factor -> VAR .)
    MINUS           reduce using rule 8 (factor -> VAR .)
    $end            reduce using rule 8 (factor -> VAR .)
    RPAREN          reduce using rule 8 (factor -> VAR .)


state 6

    (9) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    expression                     shift and go to state 11
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 7

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    term                           shift and go to state 12
    factor                         shift and go to state 3

state 8

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    term                           shift and go to state 13
    factor                         shift and go to state 3

state 9

    (4) term -> term TIMES . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    factor                         shift and go to state 14

state 10

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUM
    (8) factor -> . VAR
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 4
    VAR             shift and go to state 5
    LPAREN          shift and go to state 6

    factor                         shift and go to state 15

state 11

    (9) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 16
    PLUS            shift and go to state 7
    MINUS           shift and go to state 8


state 12

    (1) expression -> expression PLUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 9
    DIVIDE          shift and go to state 10


state 13

    (2) expression -> expression MINUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 9
    DIVIDE          shift and go to state 10


state 14

    (4) term -> term TIMES factor .

    TIMES           reduce using rule 4 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 4 (term -> term TIMES factor .)
    PLUS            reduce using rule 4 (term -> term TIMES factor .)
    MINUS           reduce using rule 4 (term -> term TIMES factor .)
    $end            reduce using rule 4 (term -> term TIMES factor .)
    RPAREN          reduce using rule 4 (term -> term TIMES factor .)


state 15

    (5) term -> term DIVIDE factor .

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 5 (term -> term DIVIDE factor .)


state 16

    (9) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> LPAREN expression RPAREN .)

